syntax = "proto3";

package pb;

option go_package = "github.com/ridhwan90/Golang-grpc/pb";

message UserInfo {
    string first_name = 1;
    string last_name = 2;
    string phone_number = 3;
    string email = 4;
}

message CreateUserRequest {
    string username =1;
    string password =2;
    UserInfo userInfo = 3;
}

message CreateUserResponse{
    string id = 1;
    string username = 2;
    UserInfo userInfo =3;
}

