syntax = "proto3";

package pb;

option go_package = "github.com/ridhwan90/Golang-grpc/pb";


message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse{
    string access_token = 1;
    string username = 2;
}
